syntax = "proto3";

// Working in progress protobuf and service definition.

package historyrag.v1;

option go_package = "go.skia.org/infra/go/rag/proto/history/v1";

import "google/api/annotations.proto";

// Service definition for the HistoryRag service.
service HistoryRagApiService {
    rpc GetTopics(GetTopicsRequest) returns (GetTopicsResponse) {
        option (google.api.http) = {
			get: "/historyrag/v1/topics"
		};
    }
    rpc GetTopicDetails(GetTopicDetailsRequest) returns (GetTopicDetailsResponse) {
        option (google.api.http) = {
			get: "/historyrag/v1/topic_details"
		};
    }
    rpc GetSummary(GetSummaryRequest) returns (GetSummaryResponse) {
        option (google.api.http) = {
			post: "/historyrag/v1/summary"
            body: "*"
		};
    }
    rpc GetRepositories(GetRepositoriesRequest) returns (GetRepositoriesResponse) {
        option (google.api.http) = {
            get: "/historyrag/v1/repositories"
        };
    }
}

// Request message for the GetTopics api.
message GetTopicsRequest {
    // Query to retrieve topics for.
    string query = 1;

    // No of topics to return.
    int64 topic_count = 2;

    // No of chunks to return.
    int64 chunk_count = 3;

    // Repository for the topic.
    string repository = 4;
}

// Request message for the GetRepositories api.
message GetRepositoriesRequest {}

// Response message for the GetRepositories api.
message GetRepositoriesResponse {
    // List of repositories.
    repeated string repositories = 1;
}

// Response message for the GetTopics api.
message GetTopicsResponse {
    // Message defining the topic data returned.
    message Topic {
        // ID of the topic.
        int64 topic_id = 1;

        // Name of the topic.
        string topic_name = 2;

        // Cosine distance score of the topic for the query.
        float cosine_distance = 3;

        // Message defining the chunk data returned.
        message Chunk {
            // The content of the chunk.
            string chunk_content = 1;
            // ID of the chunk.
            int64 chunk_id = 2;
            // Index of the chunk.
            int32 chunkIndex = 3;
        }
        // Matching chunks in the topic for the query.
        repeated Chunk matching_chunks = 4;

        // Topic summary.
        string summary = 5;

        // Repository for the topic.
        string repository = 6;
    }

    // Topics retrieved for the query.
    repeated Topic topics = 1;
}

// Request message for the GetTopicDetails api.
message GetTopicDetailsRequest {
    // IDs of the topics to retrieve details for.
    repeated int64 topic_ids = 1;
    // Whether to include code chunks in the response.
    bool include_code = 2;
    // Whether to include tests in the response.
    bool include_tests = 3;
    // Repository for the topic.
    string repository = 4;
}

// Response message for the GetTopicDetails api.
message GetTopicDetailsResponse {
    // Message defining the topic data returned.
    message Topic {
        // ID of the topic.
        int64 topic_id = 1;

        // Name of the topic.
        string topic_name = 2;

        // Summary of the topic.
        string summary = 3;

        // Code chunks for the topic.
        repeated string code_chunks = 4;
    }

    // Topic details.
    repeated Topic topics = 1;
}

// Request message for the GetSummary api.
message GetSummaryRequest {
    // The original query from the user.
    string query = 1;

    // The IDs of the topics to summarize.
    repeated int64 topic_ids = 2;

    // Repository for the topic.
    string repository = 3;
}

// Response message for the GetSummary api.
message GetSummaryResponse {
    // The summary generated by the LLM.
    string summary = 1;
}

